# hackweek_clippy

./: .gitignore  .load_reviews.py.swp  Pipfile  README.md  app.py  create_index.py  industry_mapping.csv  load_blogarticles.py  load_reviews.py  pyproject.toml  question_answering_test.ipynb  requirements.txt  reviews_index.py
config/: config.yaml
data/: kununublog.parquet
prep/: questions.txt
queries/: reviews.sql
src/: make_index.py  utils.py
